# telegram-songlinker-bot

./: .dockerignore  .env.example  .gitignore  .mise.toml  Chart.yaml  Dockerfile  Makefile  README.md  bot.py  mise.toml  pyproject.toml  values.yaml
.github/workflows/: workflow.yml
chart/: values.yaml
chart/templates/: base_secrets.yaml  secrets.yaml  telegram-bot.yaml  telegram_bot.yaml  telegram_secrets.yaml
src/songlinker/: __main__.py  bot.py  config.py  link_api.py  telegram.py  telemetry.py  tracing.py
src/songlinker/slack/: app.py
src/tests/: conftest.py  test_link_api.py
src/tests/link_api/: conftest.py  test_link_api.py  test_lookup_links_has_all_links
src/tests/link_api/cassettes/test_link_api/: TestLinkApi.yaml
templates/: base_secrets.yaml  bot.yaml  ingress.yaml  secrets.yaml  slack_app.yaml  slack_secrets.yaml  telegram_bot.yaml  telegram_secrets.yaml
terraform/: .terraform.lock.hcl  api_gateway.tf  api_gateway_domain.tf  api_gateway_vars.tf  bot.tf  bot_vars.tf  lambda_base.tf  lambda_handle_update.tf  lambda_layer.tf  providers.tf
