[project]
requires-python = "==3.14.*"
name = "songlinker"
description = "Links songs"
version = "3.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==4.0.0",
    "bs-nats-updater ==4.0.0",
    "click >=8.1.3, <9.0.0",
    "httpx >=0.28.1, <0.29.0",
    "opentelemetry-api ==1.39.*",
    "opentelemetry-sdk ==1.39.*",
    "opentelemetry-exporter-otlp-proto-grpc ==1.39.*",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "pydantic ==2.12.*",
    "python-telegram-bot ==22.6",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy==1.19.*",
    "pytest >=9.0.0, <9.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock >=3.11.1, <4.0.0",
    "pytest-recording >=0.13.0, <0.14.0",
    "ruff ==0.14.14",
    "vcrpy >=8.1.0, <8.2.0",
]

[[tool.uv.index]]
name = "internal"
url = "https://code.bjoernpetersen.net/api/packages/BjoernPetersen/pypi/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]
markers = [
    "integration",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["songlinker"]
